[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "echemdb-website"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"


[tool.setuptools]
packages = [
    "website",
    "website.generator",
    "website.filters",
    "website.macros",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "win-64"]

[tool.pixi.dependencies]
astropy = "*"
black = "*"
unitpackage = ">=0.10.0, <0.11.0"
isort = "*"
mkdocs = "*"
myst-nb = "*"
myst-parser = "*"
pip = "*"
plotly = ">=5,<6" # Workaround for https://github.com/executablebooks/MyST-NB/issues/667
pylatexenc = "*"
pylint = "*"
pytest = "*"
pytest-doctestplus = "*"
pytest-xdist = "*"
pytest-remotedata = "*"

[tool.pixi.pypi-dependencies]
linkchecker = "*"
mkdocs-gen-files = "*"
mkdocs-literate-nav = "*"
mkdocs-macros-plugin = "*"
mkdocs-material = "*"
mkdocs-material-extensions = "*"
mkdocs-section-index = "*"
markdown-katex = "*"
markdown-include = "*"
mdutils = "*"
pymdown-extensions = "*"
python-frontmatter = "*"
tabulate = "*"
echemdb-website = { path = ".", editable = true }

[tool.pixi.tasks]
doctest = "pytest -n auto --doctest-modules website"
doc = "mkdocs build"
preview = "mkdocs serve"
pylint = "pylint website"
black = "black website"
isort = "isort --profile black website"
lint = { depends-on = ["pylint", "black", "isort"] }
